Setup call to api/styles, start to format user info

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,29 @@
 * {
     font-family: 'Work Sans', sans-serif;
 }
+
+html {
+    background-color: var(--main-bg-color);
+}
+
+h1, h2, p, div {
+    padding: 0;
+    margin: 0;
+}
+
+.d-flex-col-align {
+    display: flex;
+    flex-direction: column;
+}
+
+.d-flex-row-align {
+    display: flex;
+    flex-direction: row;
+}
+
+:root{
+    --main-bg-color: #EBE9E4;
+    --sage-green: #A7B8A8;
+    --light-pink: #E3D5C9;
+    --light-orange: #E7CDAB;
+}
