--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<router-outlet>
+  <html class="app">
+    <div class="d-flex-col-align">
+      <h1 class="app__meet-the-team-header">Meet the Team</h1>
+      <team-members class="app__team-members"></team-members> 
+    </div>
+    
+  </html>
+</router-outlet>
