Add search bar icons + search bar functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet>
   <html class="app">
-    <div class="d-flex-col-align">
+    <div class="app__container">
       <h1 class="app__meet-the-team-header">Meet the Team</h1>
       <team-members class="app__team-members"></team-members> 
     </div>
