--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,13 +3,16 @@
     height: 1024px;
     position: relative;
 
+    &__container {
+        display: flex;
+        flex-direction: column;
+    }
     &__meet-the-team-header {
         font-family: 'Work Sans', sans-serif;
         font-weight: 400;
         padding: 71px 821px 48px 271px;
     } 
-    
     &__team-members {
-        padding: 0 344px 71px 344px;
+        padding: 0 344px 71px 320px;
     }
 }
