--- a/src/app/meet-the-team/team-members.component.scss
+++ b/src/app/meet-the-team/team-members.component.scss
@@ -1,19 +1,65 @@
-:host .member-cards {
-    width: 210px;
-    height: 342px;
-    &__name{
+:host .members {
+    padding: 0 61px 48px 0;
+    display: flex;
+    flex-direction: row;
 
+    &__search-bar {
+        padding-bottom: 18px;
+    }
+
+    &__list-view-icon, &__grid-view-icon, &__sort-view-icon {
+        border: none;
+        width: 25px;
+        height: 25px;
+    }
+    &__list-view-icon {
+        background: url('../../icons/list-view.svg') no-repeat;
+    }
+
+    &__grid-view-icon {
+        background: url('../../icons/grid-view.svg') no-repeat;
+    }
+    &__sort-view-icon {
+        background: url('../../icons/sorting-icon.svg') no-repeat;
+    }
+    &__member-cards {
+        display: flex;
+        flex-direction: column;
+        width: 210px;
+        height: 342px;
+        background-color: var(--white-card-color);  
+        border-radius: 20px;  
+    }
+    &__name, &__image, &__city {
+        align-self: center;
+    }
+    &__name{
+        font-family: 'Karla';
+        font-size: 18px;
+        padding: 65px 45px 35px 45px;
     }
     &__image{
-
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        margin: 0 12px 28px 16px;
     }
     &__city{
 
     }
-    &__email {
+    &__contact-info {
 
     }
-    &__call {
-        
+    &__email-icon, &__call-icon {
+        border: none;
+        width: 19px;
+        height: 19px;
+    }
+    &__email-icon {
+        background: url('../../icons/email-icon.svg') no-repeat;
+        padding-right: 20px;
+    }
+    &__call-icon {
+        background: url('../../icons/call-icon.svg') no-repeat;
     }
 }
