--- a/src/app/meet-the-team/team-members.component.html
+++ b/src/app/meet-the-team/team-members.component.html
@@ -1,70 +1,77 @@
-
-<ng-container *ngIf="display === 1">
+<!-- Grid View -->
+<div class="members" *ngIf="display === 1">
+    <!-- Search/Filter/View Bar -->
     <div class="members__view-toggle">
         <button class="members__sort-view-icon" (click)="send()"></button>
         <input class="members__search-bar" name="searchInput" type="text" [(ngModel)]="searchInput" size="50">
-        <button class="members__grid-view-icon" value="2" (click)="changeDisplay(2)"></button>  
+        <button class="members__list-view-icon" value="2" (click)="changeDisplay(2)"></button>  
     </div>
-
+    <!-- If search bar is empty, show all users -->
     <ng-container *ngIf="searchInput === ''">
-        <div class="members" *ngFor="let user of results; let i=index">
-            <div class="members__member-cards">
-                <p class="members__name">{{user.name.first}} {{user.name?.last}}</p>
-                <img class="members__image" src={{user.picture.large}}/>
-                <p class="members__city">{{user.location?.city}}</p>
-                <div class="members__contact-info">
+        <div class="members__grid">
+            <div class="members__member-cards-grid" *ngFor="let user of results; let i=index">
+                <p class="members__name-grid">{{user.name.first}} {{user.name.last}}</p>
+                <img class="members__image-grid" src={{user.picture.large}}/>
+                <p class="members__city-grid">{{user.location.city}}</p>
+                <div class="members__contact-info-grid">
                     <button class="members__email-icon"></button>
                     <button class="members__call-icon"></button>
                 </div> 
             </div>
         </div>
     </ng-container>
+    <!-- If search bar is being used, search users -->
     <ng-container *ngIf="searchInput !== ''">
-        <div class="members" *ngFor="let user of results | search: searchInput; let i=index">
-            <div class="members__member-cards">
-                <p class="members__name">{{user.name.first}} {{user.name.last}}</p>
-                <img class="members__image" src={{user.picture.large}}/>
-                <p class="members__city">{{user.location.city}}</p>
-                <div class="members__contact-info">
+        <div class="members__grid">
+            <div class="members__member-cards-grid" *ngFor="let user of results | search: searchInput; let i=index">
+                <p class="members__name-grid">{{user.name.first}} {{user.name.last}}</p>
+                <img class="members__image-grid" src={{user.picture.large}}/>
+                <p class="members__city-grid">{{user.location.city}}</p>
+                <div class="members__contact-info-grid">
                     <button class="members__email-icon"></button>
                     <button class="members__call-icon"></button>
                 </div> 
-            </div>
+            </div> 
         </div>
     </ng-container>
-    
-</ng-container>
+</div>
 
-<ng-container *ngIf="display === 2">
+<!-- List View -->
+<div class="members" *ngIf="display === 2">
+    <!-- Search/Filter/View Bar -->
     <div class="members__view-toggle">
         <button class="members__sort-view-icon" (click)="send()"></button>
         <input class="members__search-bar" name="searchInput" type="text" [(ngModel)]="searchInput" size="50">
-            <button class="members__list-view-icon" value="1" (click)="changeDisplay(1)"></button>  
+            <button class="members__grid-view-icon" value="1" (click)="changeDisplay(1)"></button>  
     </div>
+    <!-- If search bar is empty, show all users -->
     <ng-container *ngIf="searchInput === ''">
-        <div class="members" *ngFor="let user of results; let i=index">
-            <div class="members__member-cards">
-                <p class="members__name">{{user.name.first}} {{user.name.last}}</p>
-                <img class="members__image" src={{user.picture.large}}/>
-                <p class="members__city">{{user.location.city}}</p>
-                <div class="members__contact-info">
+        <div class="members__list">
+            <div class="members__member-cards-list" *ngFor="let user of results; let i=index">
+                <img class="members__image-list" src={{user.picture.large}}/>
+                <div>
+                    <p class="members__name-list">{{user.name.first}} {{user.name.last}}</p>
+                    <p class="members__city-list">{{user.location.city}}</p>   
+                </div>
+                <div class="members__contact-info-list">
                     <button class="members__email-icon"></button>
                     <button class="members__call-icon"></button>
                 </div> 
             </div>
         </div>
     </ng-container>
+    <!-- If search bar is being used, search users -->
     <ng-container *ngIf="searchInput !== ''">
-        <div class="members" *ngFor="let user of results | search: searchInput; let i=index">
-            <div class="members__member-cards">
-                <p class="members__name">{{user.name.first}} {{user.name.last}}</p>
-                <img class="members__image" src={{user.picture.large}}/>
-                <p class="members__city">{{user.location.city}}</p>
-                <div class="members__contact-info">
+        <div class="members__list">
+            <div class="members__member-cards-list" *ngFor="let user of results | search: searchInput; let i=index">
+                <p class="members__name-list">{{user.name.first}} {{user.name.last}}</p>
+                <img class="members__image-list" src={{user.picture.large}}/>
+                <p class="members__city-list">{{user.location.city}}</p>
+                <div class="members__contact-info-list">
                     <button class="members__email-icon"></button>
                     <button class="members__call-icon"></button>
                 </div> 
-            </div>
+            </div> 
         </div>
     </ng-container>
-</ng-container>
+</div>
