Colors alternate every third card

--- a/src/app/meet-the-team/team-members.component.html
+++ b/src/app/meet-the-team/team-members.component.html
@@ -14,8 +14,8 @@
                 <img class="members__image-grid" src={{user.picture.large}}/>
                 <p class="members__city-grid">{{user.location.city}}</p>
                 <div class="members__contact-info-grid">
-                    <button class="members__email-icon"></button>
-                    <button class="members__call-icon"></button>
+                    <a href='mailto:`${{user.email}}`' class="members__email-icon"></a>
+                    <a href='tel:`${{user.phone}}' class="members__call-icon"></a>
                 </div> 
             </div>
         </div>
@@ -28,8 +28,8 @@
                 <img class="members__image-grid" src={{user.picture.large}}/>
                 <p class="members__city-grid">{{user.location.city}}</p>
                 <div class="members__contact-info-grid">
-                    <button class="members__email-icon"></button>
-                    <button class="members__call-icon"></button>
+                    <a href='mailto:`${{user.email}}`' class="members__email-icon"></a>
+                    <a href='tel:`${{user.phone}}' class="members__call-icon"></a>
                 </div> 
             </div> 
         </div>
@@ -54,8 +54,8 @@
                     <p class="members__city-list">{{user.location.city}}</p>   
                 </div>
                 <div class="members__contact-info-list">
-                    <button class="members__email-icon"></button>
-                    <button class="members__call-icon"></button>
+                    <a href='mailto:`${{user.email}}`' class="members__email-icon"></a>
+                    <a href='tel:`${{user.phone}}' class="members__call-icon"></a>
                 </div> 
             </div>
         </div>
@@ -68,8 +68,8 @@
                 <img class="members__image-list" src={{user.picture.large}}/>
                 <p class="members__city-list">{{user.location.city}}</p>
                 <div class="members__contact-info-list">
-                    <button class="members__email-icon"></button>
-                    <button class="members__call-icon"></button>
+                    <a href='mailto:`${{user.email}}`' class="members__email-icon"></a>
+                    <a href='tel:`${{user.phone}}' class="members__call-icon"></a>
                 </div> 
             </div> 
         </div>
