--- a/src/app/meet-the-team/team-members.component.scss
+++ b/src/app/meet-the-team/team-members.component.scss
@@ -54,17 +54,20 @@
         width: 749px;
         height: 100px;
         border-radius: 20px;
-        background: url('../../icons/green-list-card.svg') no-repeat;
         padding-bottom: 18px;
         display: flex;
         flex-direction: row;
     }
 
-    &__member-cards-list:nth-child(3n+1) {
-        background: url('../../icons/orange-list-card.svg') no-repeat; 
+    &__member-cards-list:nth-child(3n) {
+        background: url('../../icons/green-list-card.svg') no-repeat; 
     }
 
     &__member-cards-list:nth-child(3n+2) {
+        background: url('../../icons/orange-list-card.svg') no-repeat; 
+    }
+
+    &__member-cards-list:nth-child(3n+1) {
         background: url('../../icons/pink-list-card.svg') no-repeat; 
     }
 
