Split projects out into components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<router-outlet>
-  <html class="app">
+<html class="app">
     <div class="app__container">
       <h1 class="app__meet-the-team-header">Meet the Team</h1>
-      <team-members class="app__team-members"></team-members> 
+      <app-meet-the-team class="app__team-members"></app-meet-the-team>
     </div>
-    
-  </html>
-</router-outlet>
+    <router-outlet></router-outlet>
+</html>
