--- a/src/app/components/team-grid-view/team-grid-view.component.scss
+++ b/src/app/components/team-grid-view/team-grid-view.component.scss
@@ -4,6 +4,9 @@
   flex-wrap: wrap;
 
   &__cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 210px;
     height: 342px;
     border-radius: 20px;
@@ -27,28 +30,27 @@
   &__name-grid {
     font-family: "Karla";
     font-size: 18px;
-    margin: 65px 45px 35px 42px;
-    white-space: nowrap;
-    overflow: hidden;
+    margin: auto;
+    padding: 2%;
+    white-space: break-spaces;
   }
 
   &__image-grid {
-    width: 100px;
-    height: 100px;
+    max-width: 100px;
+    max-height: 100px;
     border-radius: 50%;
-    margin: 0 55px 31px 55px;
+    margin: auto;
   }
 
   &__city-grid {
     font-family: "Lato";
     font-size: 14px;
-    white-space: nowrap;
-    margin: 0 80px 22px 70px;
-    overflow: hidden;
+    white-space: break-spaces;
+    margin: auto
   }
 
   &__contact-info-grid {
-    margin: 0 80px 34px 80px;
+    margin: auto;
   }
 
   &__email-icon,
