--- a/src/app/components/team-list-view/team-list-view.component.html
+++ b/src/app/components/team-list-view/team-list-view.component.html
@@ -1,11 +1,11 @@
 <div class="list-view">
   <div class="list-view__cards" *ngFor="let user of users; let i=index">
-    <img class="list-view__image-list" src={{user.picture.large}} />
+    <img class="list-view__image" src={{user.picture.large}} />
     <div>
-      <p class="list-view__name-list">{{user.name.first}} {{user.name.last}}</p>
-      <p class="list-view__city-list">{{user.location.city}}</p>
+      <p class="list-view__name">{{user.name.first}} {{user.name.last}}</p>
+      <p class="list-view__city">{{user.location.city}}</p>
     </div>
-    <div class="list-view__contact-info-list">
+    <div class="list-view__contact-info">
       <a href='mailto:`${{user.email}}`' class="list-view__email-icon"></a>
       <a href='tel:`${{user.phone}}' class="list-view__call-icon"></a>
     </div>
