--- a/src/app/components/team-grid-view/team-grid-view.component.html
+++ b/src/app/components/team-grid-view/team-grid-view.component.html
@@ -1,9 +1,9 @@
 <div class="grid-view">
   <div class="grid-view__cards" *ngFor="let user of users; let i=index">
-    <p class="grid-view__name-grid">{{user.name.first}} {{user.name.last}}</p>
-    <img class="grid-view__image-grid" src={{user.picture.large}} />
-    <p class="grid-view__city-grid">{{user.location.city}}</p>
-    <div class="grid-view__contact-info-grid">
+    <p class="grid-view__name-">{{user.name.first}} {{user.name.last}}</p>
+    <img class="grid-view__image" src={{user.picture.large}} />
+    <p class="grid-view__city">{{user.location.city}}</p>
+    <div class="grid-view__contact-info">
       <a href='mailto:`${{user.email}}`' class="grid-view__email-icon"></a>
       <a href='tel:`${{user.phone}}' class="grid-view__call-icon"></a>
     </div>
