--- a/src/app/components/team-grid-view/team-grid-view.component.scss
+++ b/src/app/components/team-grid-view/team-grid-view.component.scss
@@ -21,13 +21,13 @@
     background: url("../../../assets/icons/pink-grid-card.svg") no-repeat;
   }
 
-  &__name-grid,
-  &__image-grid,
-  &__city-grid {
+  &__name,
+  &__image,
+  &__city {
     text-align: center;
   }
 
-  &__name-grid {
+  &__name {
     font-family: "Karla";
     font-size: 18px;
     margin: auto;
@@ -35,21 +35,21 @@
     white-space: break-spaces;
   }
 
-  &__image-grid {
+  &__image {
     max-width: 100px;
     max-height: 100px;
     border-radius: 50%;
     margin: auto;
   }
 
-  &__city-grid {
+  &__city {
     font-family: "Lato";
     font-size: 14px;
     white-space: break-spaces;
     margin: auto
   }
 
-  &__contact-info-grid {
+  &__contact-info {
     margin: auto;
   }
 
